--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "bootstrap": "^4.5.3",
+    "i18next": "^19.8.4",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
+    "react-i18next": "^11.8.5",
     "react-scripts": "4.0.1",
+    "sass": "^1.32.4",
     "typescript": "^4.0.3",
     "web-vitals": "^0.2.4"
   },
