--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
+    "@types/react-router-dom": "^5.1.7",
+    "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "i18next": "^19.8.4",
+    "i18next-http-backend": "^1.0.22",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.8.5",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "sass": "^1.32.4",
     "typescript": "^4.0.3",
