--- a/kubernetes/deployment.yml
+++ b/kubernetes/deployment.yml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: ui
-        image: {{PACKAGE_NAME}}:{{PACKAGE_VERSION}}
+        image: {{PACKAGE_NAME}}:/{{PACKAGE_VERSION}}
         imagePullPolicy: Always
         ports:
         - containerPort: 80
