--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.5.3",
     "dayjs": "^1.10.4",
+    "formik": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.22",
     "react": "^17.0.1",
