--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "formik": "^2.2.6",
     "i18next": "^19.8.4",
     "i18next-http-backend": "^1.0.22",
+    "keycloak-js": "^12.0.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
