--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,3 +1,7 @@
+upstream backend-service {
+  server management-core;
+}
+
 server {
 
   listen 80;
@@ -8,10 +12,13 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  location /api {
+    proxy_pass http://backend-service;
+  }
+
   error_page   500 502 503 504  /50x.html;
 
   location = /50x.html {
     root   /usr/share/nginx/html;
   }
-
 }
