--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,14 +6,14 @@ server {
 
   listen 80;
 
+  location /api {
+    proxy_pass http://backend-service:8080;
+  }
+
   location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
-  }
-
-  location /api {
-    proxy_pass http://backend-service;
   }
 
   error_page   500 502 503 504  /50x.html;
