--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,13 +1,29 @@
-upstream backend-service {
-  server management-core;
+# upstream backend_service {
+#   server management-core;
+# }
+
+upstream jenkins_service {
+  server jenkins;
+}
+
+upstream keycloak_service {
+  server keycloak;
 }
 
 server {
 
   listen 80;
 
-  location /api {
-    proxy_pass http://backend-service:8080;
+  # location /api {
+  #   proxy_pass http://backend_service:8080;
+  # }
+
+  location /jenkins {
+    proxy_pass http://jenkins;
+  }
+
+  location /keycloak {
+    proxy_pass http://keycloak;
   }
 
   location / {
