move front do default namepsace

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -6,9 +6,9 @@ upstream jenkins_service {
   server jenkins;
 }
 
-upstream keycloak_service {
-  server keycloak;
-}
+# upstream keycloak_service {
+#   server keycloak;
+# }
 
 server {
 
