--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,13 +2,13 @@
 #   server management-core;
 # }
 
-upstream jenkins_service {
-  server jenkins;
-}
-
-# upstream keycloak_service {
-#   server keycloak;
+# upstream jenkins_service {
+#   server jenkins;
 # }
+
+upstream keycloak_service {
+  server keycloak;
+}
 
 server {
 
@@ -18,9 +18,9 @@ server {
   #   proxy_pass http://backend_service:8080;
   # }
 
-  location /jenkins {
-    proxy_pass http://jenkins;
-  }
+  # location /jenkins {
+  #   proxy_pass http://jenkins;
+  # }
 
   location /keycloak {
     proxy_pass http://keycloak;
