--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,10 +1,10 @@
-# upstream backend_service {
-#   server management-core;
-# }
+upstream backend_service {
+  server management-core;
+}
 
-# upstream jenkins_service {
-#   server jenkins;
-# }
+upstream jenkins_service {
+  server jenkins;
+}
 
 upstream keycloak_service {
   server keycloak;
@@ -14,16 +14,16 @@ server {
 
   listen 80;
 
-  # location /api {
-  #   proxy_pass http://backend_service:8080;
-  # }
+  location /api {
+    proxy_pass http://backend_service:8080;
+  }
 
-  # location /jenkins {
-  #   proxy_pass http://jenkins;
-  # }
+  location /jenkins {
+    proxy_pass http://jenkins_service:8080;
+  }
 
   location /keycloak {
-    proxy_pass http://keycloak;
+    proxy_pass http://keycloak_service:8080;
   }
 
   location / {
