--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,15 +15,15 @@ server {
   listen 80;
 
   location /api {
-    proxy_pass http://backend_service:8080;
+    proxy_pass http://backend_service;
   }
 
   location /jenkins {
-    proxy_pass http://jenkins_service:8080;
+    proxy_pass http://jenkins_service;
   }
 
   location /keycloak {
-    proxy_pass http://keycloak_service:8080;
+    proxy_pass http://keycloak_service;
   }
 
   location /view {
