--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -15,18 +15,18 @@ server {
   listen 80;
 
   location /api {
-    proxy_pass http://backend_service;
+    proxy_pass http://backend_service/;
   }
 
   location /jenkins {
-    proxy_pass http://jenkins_service;
+    proxy_pass http://jenkins_service/;
   }
 
   location /keycloak {
-    proxy_pass http://keycloak_service;
+    proxy_pass http://keycloak_service/;
   }
 
-  location /view {
+  location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
