--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,19 +14,19 @@ server {
 
   listen 80;
 
-  location /api {
+  location /api/ {
     proxy_pass http://backend_service/;
   }
 
-  location /jenkins {
+  location /jenkins/ {
     proxy_pass http://jenkins_service/;
   }
 
-  location /keycloak {
+  location /keycloak/ {
     proxy_pass http://keycloak_service/;
   }
 
-  location / {
+  location /view/ {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
