--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
 
   listen 80;
 
-  location /api/ {
+  location ^~ /api/ {
     proxy_pass http://backend_service/;
   }
 
@@ -26,7 +26,7 @@ server {
     proxy_pass http://keycloak_service/;
   }
 
-  location /view/ {
+  location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
