--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -18,11 +18,11 @@ server {
     proxy_pass http://backend_service/;
   }
 
-  location /jenkins/ {
+  location ^~ /jenkins/ {
     proxy_pass http://jenkins_service/;
   }
 
-  location /keycloak/ {
+  location ^~ /keycloak/ {
     proxy_pass http://keycloak_service/;
   }
 
