created final proxy configuration

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -2,14 +2,6 @@ upstream backend_service {
   server management-core;
 }
 
-upstream jenkins_service {
-  server jenkins;
-}
-
-upstream keycloak_service {
-  server keycloak;
-}
-
 server {
 
   listen 80;
@@ -18,15 +10,7 @@ server {
     proxy_pass http://backend_service/;
   }
 
-  location ^~ /jenkins/ {
-    proxy_pass http://jenkins_service/;
-  }
-
-  location ^~ /keycloak/ {
-    proxy_pass http://keycloak_service/;
-  }
-
-  location ^~ /view/ {
+  location / {
     root   /usr/share/nginx/html;
     index  index.html index.htm;
     try_files $uri $uri/ /index.html;
